k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-hello-world
spec:
  selector:
    app: nodejs-hello-world
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
